testsuite/tests/partial-sigs/should_fail/WildcardInADT3.hs
{-# LANGUAGE PartialTypeSignatures, RankNTypes #-}
module WildcardInADT3 where

data Foo a = Foo { get :: _ => a }
