testsuite/tests/partial-sigs/should_fail/WildcardInADT3.stderr

WildcardInADT3.hs:4:27: error: [GHC-65507]
    • Wildcard ‘_’ not allowed
    • In the definition of data constructor ‘Foo’
